--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,17 @@
 Homestead.json
 Homestead.yaml
 Thumbs.db
+/storage/framework/cache/data/*
+/storage/framework/sessions/*
+/storage/framework/testing/*
+/storage/framework/views/*
+/storage/logs/*
+/bootstrap/cache/*
+
+# Ignorar todo en storage excepto los archivos .gitignore para mantener la estructura
+/storage/framework/cache/data/**/*
+!/storage/framework/cache/data/.gitignore
+/storage/framework/sessions/**/*
+!/storage/framework/sessions/.gitignore
+/storage/framework/views/**/*
+!/storage/framework/views/.gitignore
